update y ffixes