@@ -3,31 +3,39 @@ package org.springframework.samples.petclinic.match;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.when;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.not;
-import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
+
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.FilterType;
 import org.springframework.http.MediaType;
-import org.springframework.samples.petclinic.user.UserService;
+import org.springframework.samples.petclinic.gunfighter.Gunfighter;
+import org.springframework.samples.petclinic.gunfighter.GunfighterService;
+import org.springframework.samples.petclinic.player.Player;
+import org.springframework.samples.petclinic.player.PlayerService;
+import org.springframework.samples.petclinic.user.Authorities;
+import org.springframework.samples.petclinic.user.AuthoritiesService;
 import org.springframework.security.config.annotation.web.WebSecurityConfigurer;
 import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.samples.petclinic.configuration.services.NotificationService;
 import org.springframework.test.web.servlet.MockMvc;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -35,135 +43,193 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 @WebMvcTest(value = MatchRestController.class, excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = WebSecurityConfigurer.class))
 class MatchRestControllerTests {
 
-    private static final int TEST_MATCH_ID = 1;
     private static final String BASE_URL = "/api/v1/matches";
 
+    @SuppressWarnings("unused")
     @Autowired
     private MatchRestController matchController;
+
+    @Autowired
+    private MockMvc mockMvc;
 
     @MockBean
     private MatchService matchService;
 
     @MockBean
-    private UserService userService;
+    private PlayerService playerService;
+
+    @MockBean
+    private GunfighterService gunfighterService;
+
+    @MockBean
+    private NotificationService notificationService;
 
     @Autowired
     private ObjectMapper objectMapper;
 
-    @Autowired
-    private MockMvc mockMvc;
-
     private Match match;
+
+    private Player player1;
+
+    private Player player2;
 
     @BeforeEach
     void setup() {
+        List<String> joinedPlayers = new ArrayList<>();
+        joinedPlayers.add("player1");
         match = new Match();
-        match.setId(TEST_MATCH_ID);
-        match.setName("Test Match");
+        match.setId(1);
         match.setMatchState(MatchState.OPEN);
-        match.setJoinedPlayers(List.of("player1", "player2"));
+        match.setJoinedPlayers(joinedPlayers);
+
+        player1 = new Player();
+        player1.setUsername("player1");
+        player1.setPassword("player1");
+        player1.setName("Name");
+        player1.setSurname("Surname");
+        player1.setNickname("nickname1");
+        player1.setAvatar("avatar.png");
+        player1.setEmail("player1@gmail.com");
+
+        player2 = new Player();
+        player2.setUsername("player2");
+        player2.setPassword("player2");
+        player2.setName("Name");
+        player2.setSurname("Surname");
+        player2.setNickname("nickname2");
+        player2.setAvatar("avatar.png");
+        player2.setEmail("player2@gmail.com");
+
+        Authorities playerAuth = new Authorities();
+        playerAuth.setId(2);
+        playerAuth.setAuthority("PLAYER");
+        player1.setAuthority(playerAuth);
+        player2.setAuthority(playerAuth);
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldFindAll() throws Exception {
-        when(this.matchService.findAll()).thenReturn(List.of(match));
-        mockMvc.perform(get(BASE_URL))
+    void testFindAllMatches() throws Exception {
+        List<Match> matches = Arrays.asList(match);
+        when(matchService.findAll()).thenReturn(matches);
+
+        mockMvc.perform(get("/api/v1/matches"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()").value(1))
-                .andExpect(jsonPath("$[0].id").value(TEST_MATCH_ID));
+                .andExpect(jsonPath("$[0].id").value(1));
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldReturnMatch() throws Exception {
-        when(this.matchService.findMatchById(TEST_MATCH_ID)).thenReturn(match);
-        mockMvc.perform(get(BASE_URL + "/{id}", TEST_MATCH_ID))
+    void testFindMatchById() throws Exception {
+        when(matchService.findMatchById(1)).thenReturn(match);
+
+        mockMvc.perform(get("/api/v1/matches/1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id").value(TEST_MATCH_ID))
-                .andExpect(jsonPath("$.name").value(match.getName()))
-                .andExpect(jsonPath("$.matchState").value(match.getMatchState().toString()))
-                .andExpect(jsonPath("$.joinedPlayers.size()").value(match.getJoinedPlayers().size()));
+                .andExpect(jsonPath("$.id").value(1));
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldReturnMatchesByUsername() throws Exception {
-        String username = "player1";
-        when(this.matchService.findMatchsByPlayer(username)).thenReturn(List.of(match));
-        mockMvc.perform(get(BASE_URL + "/player/{username}", username))
+    void testFindMatchesByUsername() throws Exception {
+        List<Match> matches = Arrays.asList(match);
+        when(matchService.findMatchsByPlayer("player1")).thenReturn(matches);
+
+        mockMvc.perform(get(BASE_URL + "/player/player1"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.size()").value(1))
-                .andExpect(jsonPath("$[0].id").value(TEST_MATCH_ID));
+                .andExpect(jsonPath("$[0].id").value(1));
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldCreateMatch() throws Exception {
-        Match newMatch = new Match();
-        newMatch.setName("New Match");
-        newMatch.setMatchState(MatchState.OPEN);
-        when(this.matchService.saveMatch(any(Match.class))).thenReturn(newMatch);
+    void testCreateMatch() throws Exception {
+        List<String> joinedPlayers = new ArrayList<>();
+        joinedPlayers.add("player1");
+        Match match = new Match();
+        match.setName("Prueba");
+        match.setJoinedPlayers(joinedPlayers);
 
-        mockMvc.perform(post(BASE_URL).with(csrf())
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(newMatch)))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.name").value(newMatch.getName()))
-                .andExpect(jsonPath("$.matchState").value(newMatch.getMatchState().toString()));
+        mockMvc.perform(post(BASE_URL).with(csrf()).contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(match))).andExpect(status().isCreated());
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldUpdateMatchJoining() throws Exception {
-        Match existingMatch = new Match();
-        existingMatch.setId(TEST_MATCH_ID);
-        existingMatch.setMatchState(MatchState.OPEN);
-        existingMatch.setJoinedPlayers(new ArrayList<>()); 
-        
-        when(matchService.findMatchById(TEST_MATCH_ID)).thenReturn(existingMatch);
-        when(matchService.saveMatch(any(Match.class))).thenAnswer(invocation -> invocation.getArgument(0));
+    void testJoinMatch() throws Exception {
+        when(matchService.findMatchById(1)).thenReturn(match);
+        when(matchService.saveMatch(any(Match.class))).thenReturn(match);
 
-        mockMvc.perform(put(BASE_URL + "/{id}/join", TEST_MATCH_ID)
+        mockMvc.perform(put("/api/v1/matches/1/join")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content("\"newPlayer\""))
-                .andExpect(status().is(201))
-                .andExpect(jsonPath("$.joinedPlayers", hasItem("newPlayer")));
+                .content("\"player2\""))
+                .andExpect(status().isCreated());
     }
-    
+
     @Test
     @WithMockUser("admin")
-    void shouldSetMatchWinner() throws Exception {
-        when(this.matchService.findMatchById(TEST_MATCH_ID)).thenReturn(match);
-        when(this.matchService.saveMatch(any(Match.class))).thenReturn(match);
+    void testUnjoinMatch() throws Exception {
+        when(matchService.findMatchById(1)).thenReturn(match);
+        when(matchService.saveMatch(any(Match.class))).thenReturn(match);
 
-        mockMvc.perform(patch(BASE_URL + "/{id}/winner", TEST_MATCH_ID).with(csrf())
+        mockMvc.perform(put("/api/v1/matches/1/unjoin")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString("winner")))
+                .with(csrf())
+                .content("\"player1\""))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.winner").value("winner"));
+                .andExpect(jsonPath("$.id").value(1));
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldUpdateMatchStart() throws Exception {
-        when(this.matchService.findMatchById(TEST_MATCH_ID)).thenReturn(match);
-        when(this.matchService.saveMatch(any(Match.class))).thenReturn(match);
+    void testSetMatchWinner() throws Exception {
+        when(matchService.findMatchById(1)).thenReturn(match);
+        when(matchService.saveMatch(any(Match.class))).thenReturn(match);
 
-        mockMvc.perform(patch(BASE_URL + "/{id}/start", TEST_MATCH_ID).with(csrf())
-                .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(patch("/api/v1/matches/1/winner")
+                .with(csrf())
+                .contentType(MediaType.APPLICATION_JSON)
+                .content("\"player1\""))
                 .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.matchState").value(MatchState.IN_PROGRESS.toString()));
+                .andExpect(jsonPath("$.id").value(1));
     }
 
     @Test
     @WithMockUser("admin")
-    void shouldDeleteMatch() throws Exception {
-        when(this.matchService.findMatchById(TEST_MATCH_ID)).thenReturn(match);
-        doNothing().when(this.matchService).deleteMatch(TEST_MATCH_ID);
+    void testUpdateMatchStart() throws Exception {
+        match.setJoinedPlayers(List.of("player1", "player2"));
 
-        mockMvc.perform(delete(BASE_URL + "/{id}", TEST_MATCH_ID).with(csrf()))
+        Gunfighter gunfighter0 = new Gunfighter();
+        gunfighter0.setPlayerNumber(0);
+        gunfighter0.setPlayer(player1);
+        gunfighter0.setMatch(match);
+
+        Gunfighter gunfighter1 = new Gunfighter();
+        gunfighter1.setPlayerNumber(1);
+        gunfighter1.setPlayer(player2);
+        gunfighter1.setMatch(match);
+
+        when(matchService.findMatchById(1)).thenReturn(match);
+        when(playerService.findByUsername("player1")).thenReturn(player1);
+        when(playerService.findByUsername("player2")).thenReturn(player2);
+        when(matchService.saveMatch(any(Match.class))).thenReturn(match);
+        when(gunfighterService.save(any(Gunfighter.class))).thenReturn(gunfighter0).thenReturn(gunfighter1);
+
+        mockMvc.perform(patch("/api/v1/matches/1/start").with(csrf()))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.matchState").value("IN_PROGRESS"))
+                .andExpect(jsonPath("$.id").value(1));
+
+        Mockito.verify(matchService).initialDeal(any(Match.class), any(Gunfighter.class), any(Gunfighter.class));
+        Mockito.verify(gunfighterService, Mockito.times(2)).save(any(Gunfighter.class));
+    }
+
+    @Test
+    @WithMockUser("admin")
+    void testDeleteMatch() throws Exception {
+        when(this.matchService.findMatchById(1)).thenReturn(match);
+
+        doNothing().when(this.matchService).deleteMatch(1);
+        mockMvc.perform(delete(BASE_URL + "/{id}", 1).with(csrf()))
                 .andExpect(status().isNoContent());
     }
 }
